# VoidGL

./: README.md  build.gradle  local.properties  settings.gradle
.github/workflows/: android-build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/ui/: app.js  index.html  style.css
app/src/main/cmake/: CMakeLists.txt
app/src/main/cpp/: jni_bridge.cpp  perf_layer.cpp  perf_layer.h
app/src/main/java/com/example/mcperf/: MainActivity.kt  NativeBridge.kt  SettingsManager.kt
app/src/main/res/values/: colors.xml  strings.xml
